@@ -8,6 +8,16 @@
         * WebFrame.cpp:
         (WebFrame::selectAll): Implement "SelectAll" command.
 
+2009-12-09  Brent Fulgham  <bfulgham@webkit.org>
+
+        Reviewed by Darin Adler.
+
+        Provide an implementation for 'selectAll'
+        https://bugs.webkit.org/show_bug.cgi?id=32296
+
+        * WebFrame.cpp:
+        (WebFrame::selectAll): Implement "SelectAll" command.
+
 2009-12-08  Chris Marrin  <cmarrin@apple.com>
 
         Reviewed by Adam Roben.
